# LightAsAGuide

./: README.md
AndroidSoftware/LightApp/: settings.gradle.kts
AndroidSoftware/LightApp/app/: build.gradle.kts
AndroidSoftware/LightApp/app/src/main/: AndroidManifest.xml
AndroidSoftware/LightApp/app/src/main/assets/DefaultSessions/: 1Min.session  30Min.session  30MinNew.session  3Min.session
AndroidSoftware/LightApp/app/src/main/res/drawable/: ic_debug_black_24dp.xml  ic_light_preview.xml  (+2 more)
AndroidSoftware/LightApp/gradle/: libs.versions.toml
AndroidSoftware/LightApp/gradle/wrapper/: gradle-wrapper.properties
AndroidSoftware/modelio/workspace/LightApp/.runtime/: .save  projectInfo.html
Firmware/: CMakeLists.txt  sdkconfig
Firmware/Bluedroid_Connection/: sdkconfig
Firmware/LEDc/ledc_basic/main/: ledc_basic_example_main.c
Firmware/examples/bt_spp_initiator/main/: main.c
Firmware/examples/bt_spp_vfs_initiator/: sdkconfig
Firmware/lightasaguide-firmware/: CMakeLists.txt  README.md  sdkconfig
Firmware/lightasaguide-firmware/main/: CMakeLists.txt  led.h  main.c  spp_task.h
Firmware/main/: CMakeLists.txt  adc_read.c  adc_read.h  bluedroid_spp.c  bluedroid_spp.h  led.c  led.h  main.c  parse_data_task.c  parse_data_task.h  run_leds_task.c  run_leds_task.h
LightApp/app/: build.gradle.kts
LightApp/gradle/wrapper/: gradle-wrapper.properties
software/LightApp/: settings.gradle.kts
software/LightApp/gradle/: libs.versions.toml
software/modelio/workspace/LightApp/: project.conf
software/modelio/workspace/LightApp/.runtime/: .save  projectInfo.html
(+67 files in other folders)
